<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/teachers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:text="@string/name"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/teachers_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/course"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/teachers_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/email"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/teachers_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/phone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"/>

</LinearLayout>